@@ -1,7 +1,8 @@
-2020-07-22 Jan Kotanski <jan.kotanski@desy.de>
+2020-07-24 Jan Kotanski <jan.kotanski@desy.de>
 	* improve fetching units from nexus files
 	* add tests for NXSLastImage parameter
 	* add tests for Nexus File image source
+	* add tests for Tango Events image source
 	* tagged as 2.43.8
 
 2020-07-14 Jan Kotanski <jan.kotanski@desy.de>
